# RosCanBus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  signaldb.xlsx  test_signaldb.xlsx
lib/xlnt/: CMakeCache.txt  cmake_install.cmake
lib/xlnt/tests/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  CanGwController.cpp  CanGwController.hpp  CanGwInterfaces.cpp  CanGwInterfaces.hpp  CanGwModel.cpp  CanGwModel.hpp  CanSignalCollectionModel.hpp  CanSignalModel.hpp  CommandLineModel.cpp  CommandLineModel.hpp  Enumerators.hpp  EventSignal.hpp  main.cpp
src/CanDB/: FrameReader.cpp  FrameReader.hpp  SignalDefinition.hpp  SignalReader.cpp  SignalReader.hpp
src/Controllers/: FrameToSignalsController.cpp  FrameToSignalsController.hpp
src/Interfaces/: CAN.cpp  CAN.hpp  RosPublisher.cpp
src/Models/: CanSignalCollectionModel.cpp  CanSignalCollectionModel.hpp  CanSignalModel.cpp  CanSignalModel.hpp
src/roscanbus/: CMakeLists.txt  README.md  package.xml
src/roscanbus/lib/xlnt/: CMakeLists.txt  CTestTestfile.cmake  Makefile
src/roscanbus/src/: CanGwController.cpp  CanGwController.hpp  CanGwInterfaces.cpp  CanGwInterfaces.hpp  CanGwModel.cpp  CanGwModel.hpp  Enumerators.hpp  EventSignal.cpp  main.cpp
src/roscanbus/src/CanDB/: Frame.cpp  Frame.hpp  FrameReader.cpp  FrameReader.hpp  SignalDecoder.cpp  SignalDecoder.hpp  SignalDefinition.cpp  SignalDefinition.hpp  SignalReader.cpp  SignalReader.hpp
src/roscanbus/src/Controllers/: CanTransmitterController.cpp  CanTransmitterController.hpp  FrameToSignalsController.cpp  FrameToSignalsController.hpp  ImuPublishController.cpp  ImuPublishController.hpp  RosSubscriberController.cpp  RosSubscriberController.hpp  SignalPublishingController.cpp  SignalPublishingController.hpp
src/roscanbus/test/: cansender.cpp  test.cpp  test_tx.cpp
test/: test.cpp
(+30 files in other folders)
